C-b in tmux is nested prefix, no autorename

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,9 +1,10 @@
 # help from http://robots.thoughtbot.com/a-tmux-crash-course
 # remap prefix
-set -g prefix C-a
-# bind 'C-a C-a' to type 'C-a'
 unbind C-b
-bind C-a send-prefix
+set -g prefix C-a
+# for nested sessions
+bind -n C-b send-prefix
+bind R source-file ~/.tmux.conf
 
 # vi, not emacs
 setw -g mode-keys vi
@@ -31,8 +32,13 @@ set -g mouse-select-pane on
 set -g mouse-select-window on
 
 
+# dont automatically rename windows
+set -g allow-rename off 	# stops zsh
+setw -g automatic-rename off 	# stops tmux
 # shoutout to aykamko
 ###############################################################################
+# size windows based on min client size connected to window, not min size connected to session
+setw -g aggressive-resize on
 # Status Bar
 ###############################################################################
 set-option -g status-utf8 on
