--- a/tmux.conf
+++ b/tmux.conf
@@ -24,6 +24,11 @@ bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
 bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+# help for nested tmux
+bind h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
+bind j if-shell "$is_vim" "send-keys C-h" "select-pane -D"
+bind k if-shell "$is_vim" "send-keys C-h" "select-pane -U"
+bind l if-shell "$is_vim" "send-keys C-h" "select-pane -R"
 
 # for mouse control
 set -g mode-mouse on
