open tmux panes in cwd

--- a/tmux.conf
+++ b/tmux.conf
@@ -13,8 +13,8 @@ setw -g mode-keys vi
 #unbind ^A
 #bind ^A select-pane -t :.+
 # pane splitting
-bind v split-window -h
-bind s split-window
+bind v split-window -h -c "#{pane_current_path}"
+bind s split-window -c "#{pane_current_path}"
 
 # for navigating in and out of vim easily
 # Smart pane switching with awareness of vim splits
