add tmux plugin manager, tmux resurrect

--- a/tmux.conf
+++ b/tmux.conf
@@ -8,6 +8,8 @@ bind R source-file ~/.tmux.conf
 
 # vi, not emacs
 setw -g mode-keys vi
+# the future has 8 bit color
+set -g default-terminal "screen-256color"
 
 # quick pane cycling, doesn't work..?
 #unbind ^A
@@ -95,3 +97,26 @@ bind-key -n C-6 select-window -t :6
 bind-key -n C-7 select-window -t :7
 bind-key -n C-8 select-window -t :8
 bind-key -n C-9 select-window -t :9
+
+# tpm binds prefix I to reload / install, like :PluginInstall for Vundle
+# prefix U to update
+# tmux plugin manager
+# List of plugins
+# Supports `github_username/repo` or full git repo URLs
+set -g @tpm_plugins '              \
+  tmux-plugins/tpm                 \
+  tmux-plugins/tmux-resurrect      \
+  tmux-plugins/tmux-yank           \
+'
+# Other examples:
+# github_username/plugin_name    \
+# git@github.com/user/plugin     \
+# git@bitbucket.com/user/plugin  \
+  # tmux-plugins/tmux-sensible       \ # no tim pope i dont want to be you
+
+# Initializes TMUX plugin manager.
+# Keep this line at the very bottom of tmux.conf.
+run-shell '~/.tmux/plugins/tpm/tpm'
+
+# for tmux-resurrect
+set -g @resurrect-processes 'vim mvim "git log"'
