get clipboard working in tmux->vim with <C-c>, set
up tmux-resurrect

--- a/tmux.conf
+++ b/tmux.conf
@@ -10,6 +10,7 @@ bind R source-file ~/.tmux.conf
 setw -g mode-keys vi
 # the future has 8 bit color
 set -g default-terminal "screen-256color"
+set-option -g default-command ". > /dev/null 2>&1; reattach-to-user-namespace -l $SHELL"
 
 # quick pane cycling, doesn't work..?
 #unbind ^A
@@ -120,3 +121,7 @@ run-shell '~/.tmux/plugins/tpm/tpm'
 
 # for tmux-resurrect
 set -g @resurrect-processes 'vim mvim "git log"'
+# for vim
+set -g @resurrect-strategy-vim 'session'
+# for neovim
+set -g @resurrect-strategy-nvim 'session'
