--- a/tmux.conf
+++ b/tmux.conf
@@ -2,8 +2,9 @@
 # remap prefix
 unbind C-b
 set -g prefix C-a
+bind-key a send-prefix # for using <C-a><a> to get to front of line
 # for nested sessions
-bind -n C-b send-prefix
+bind -n C-b send-prefix # note: stop nesting tmux sessions! just use iterm tabs lol
 bind R source-file ~/.tmux.conf
 
 # vi, not emacs
@@ -49,7 +50,7 @@ setw -g automatic-rename off 	# stops tmux
 setw -g aggressive-resize on
 # Status Bar
 ###############################################################################
-set-option -g status-utf8 on
+set-option -g status-utf9 on
 
 # status bar format
 set-option -g status-position top
@@ -120,7 +121,7 @@ set -g @tpm_plugins '              \
 run-shell '~/.tmux/plugins/tpm/tpm'
 
 # for tmux-resurrect
-set -g @resurrect-processes 'vim mvim "git log"'
+set -g @resurrect-processes 'vim mvim "git log" "~MacVim.app"'
 # for vim
 set -g @resurrect-strategy-vim 'session'
 # for neovim
