bind <C-a>S to session chooser

--- a/tmux.conf
+++ b/tmux.conf
@@ -19,6 +19,7 @@ set-option -g default-command ". > /dev/null 2>&1; reattach-to-user-namespace -l
 # pane splitting
 bind v split-window -h -c "#{pane_current_path}"
 bind s split-window -c "#{pane_current_path}"
+bind S choose-tree
 
 # for navigating in and out of vim easily
 # Smart pane switching with awareness of vim splits
