add vim v and y to copy mode in tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -35,6 +35,10 @@ bind j if-shell "$is_vim" "send-keys C-h" "select-pane -D"
 bind k if-shell "$is_vim" "send-keys C-h" "select-pane -U"
 bind l if-shell "$is_vim" "send-keys C-h" "select-pane -R"
 
+# vim style copy in copy mode
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-selection
+
 # for mouse control
 set -g mode-mouse on
 set -g mouse-resize-pane on
