change prefix to C-z

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,7 @@
 # help from http://robots.thoughtbot.com/a-tmux-crash-course
 # remap prefix
 unbind C-b
-set -g prefix C-a
+set -g prefix C-z
 bind-key a send-prefix # for using <C-a><a> to get to front of line
 # for nested sessions
 bind -n C-b send-prefix # note: stop nesting tmux sessions! just use iterm tabs lol
