--- a/tmux.conf
+++ b/tmux.conf
@@ -4,7 +4,7 @@ unbind C-b
 set -g prefix C-a
 bind-key a send-prefix # for using <C-a><a> to get to front of line
 # for nested sessions
-bind -n C-b send-prefix # note: stop nesting tmux sessions! just use iterm tabs lol
+# bind -n C-b send-prefix # note: stop nesting tmux sessions! just use iterm tabs lol
 bind R source-file ~/.tmux.conf
 
 # vi, not emacs
