--- a/tmux.conf
+++ b/tmux.conf
@@ -36,6 +36,7 @@ bind k if-shell "$is_vim" "send-keys C-h" "select-pane -U"
 bind l if-shell "$is_vim" "send-keys C-h" "select-pane -R"
 
 # vim style copy in copy mode
+# PSA: just option-click text (shift click on non OS X)
 bind-key -t vi-copy 'v' begin-selection
 bind-key -t vi-copy 'y' copy-selection
 
