C-a C-w to send C-w: using vim splits
b/c xserver doesn't exist on headless remote servers and i can't ssh -X xforward right

--- a/tmux.conf
+++ b/tmux.conf
@@ -39,6 +39,8 @@ bind l if-shell "$is_vim" "send-keys C-h" "select-pane -R"
 # PSA: just option-click text (shift click on non OS X)
 bind-key -t vi-copy 'v' begin-selection
 bind-key -t vi-copy 'y' copy-selection
+# C-a C-w to send C-w
+bind-key C-w send-keys C-w
 
 # for mouse control
 set -g mode-mouse on
