--- a/tmux.conf
+++ b/tmux.conf
@@ -9,6 +9,8 @@ bind R source-file ~/.tmux.conf
 
 # vi, not emacs
 setw -g mode-keys vi
+# nvim, not vim
+set -s escape-time 0
 # the future has 8 bit color
 set -g default-terminal "screen-256color"
 set-option -g default-command ". > /dev/null 2>&1; reattach-to-user-namespace -l $SHELL"
