--- a/tmux.conf
+++ b/tmux.conf
@@ -49,6 +49,9 @@ set -g mode-mouse on
 set -g mouse-resize-pane on
 set -g mouse-select-pane on
 set -g mouse-select-window on
+# don't lose control when getting buffered output
+setw -g c0-change-interval 100
+setw -g c0-change-trigger 250
 
 
 # dont automatically rename windows
