ditch nvim, fix tmux for 2.1

--- a/tmux.conf
+++ b/tmux.conf
@@ -45,13 +45,10 @@ bind-key -t vi-copy 'y' copy-selection
 bind-key C-w send-keys C-w
 
 # for mouse control
-set -g mode-mouse on
-set -g mouse-resize-pane on
-set -g mouse-select-pane on
-set -g mouse-select-window on
+set-option -g mouse on
 # don't lose control when getting buffered output
-setw -g c0-change-interval 100
-setw -g c0-change-trigger 250
+# setw -g c0-change-interval 100
+# setw -g c0-change-trigger 250
 
 
 # dont automatically rename windows
