--- a/tmux.conf
+++ b/tmux.conf
@@ -119,6 +119,7 @@ set -g @tpm_plugins '              \
   tmux-plugins/tpm                 \
   tmux-plugins/tmux-resurrect      \
   tmux-plugins/tmux-yank           \
+  nhdaly/tmux-scroll-copy-mode     \
 '
 # Other examples:
 # github_username/plugin_name    \
