trying vi mode out

--- a/tmux.conf
+++ b/tmux.conf
@@ -49,6 +49,7 @@ set-option -g mouse on
 # don't lose control when getting buffered output
 # setw -g c0-change-interval 100
 # setw -g c0-change-trigger 250
+set -g history-limit 30000
 
 
 # dont automatically rename windows
