move tmux run script to bottom of tmux.conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -120,15 +120,11 @@ set -g @tpm_plugins '              \
   tmux-plugins/tmux-yank           \
   nhdaly/tmux-scroll-copy-mode     \
 '
-# Other examples:
-# github_username/plugin_name    \
-# git@github.com/user/plugin     \
-# git@bitbucket.com/user/plugin  \
-  # tmux-plugins/tmux-sensible       \ # no tim pope i dont want to be you
-
-# Initializes TMUX plugin manager.
-# Keep this line at the very bottom of tmux.conf.
-run-shell '~/.tmux/plugins/tpm/tpm'
+# new syntax, not using for now
+#set -g @plugin 'tmux-plugins/tpm'
+#set -g @plugin 'tmux-plugins/tmux-resurrect'
+#set -g @plugin 'tmux-plugins/tmux-yank'
+#set -g @plugin 'nhdaly/tmux-scroll-copy-mode'
 
 # for tmux-resurrect
 set -g @resurrect-processes 'vim mvim "git log" "~MacVim.app"'
@@ -136,3 +132,7 @@ set -g @resurrect-processes 'vim mvim "git log" "~MacVim.app"'
 set -g @resurrect-strategy-vim 'session'
 # for neovim
 set -g @resurrect-strategy-nvim 'session'
+
+# Initializes TMUX plugin manager.
+# Keep this line at the very bottom of tmux.conf.
+run '~/.tmux/plugins/tpm/tpm'
