--- a/tmux.conf
+++ b/tmux.conf
@@ -49,7 +49,7 @@ set-option -g mouse on
 # don't lose control when getting buffered output
 # setw -g c0-change-interval 100
 # setw -g c0-change-trigger 250
-set -g history-limit 30000
+set -g history-limit 50000
 
 
 # dont automatically rename windows
@@ -119,6 +119,7 @@ set -g @tpm_plugins '              \
   tmux-plugins/tmux-resurrect      \
   tmux-plugins/tmux-yank           \
   nhdaly/tmux-scroll-copy-mode     \
+  tmux-plugins/tmux-sensible       \
 '
 # new syntax, not using for now
 #set -g @plugin 'tmux-plugins/tpm'
