fix reattach-to-user-namespace for linux

--- a/tmux.conf
+++ b/tmux.conf
@@ -13,7 +13,7 @@ setw -g mode-keys vi
 set -s escape-time 0
 # the future has 8 bit color
 set -g default-terminal "screen-256color"
-set-option -g default-command ". > /dev/null 2>&1; reattach-to-user-namespace -l $SHELL"
+if-shell "uname | grep -q Darwin" "set-option -g default-command \"reattach-to-user-namespace -l bash\""
 
 # quick pane cycling, doesn't work..?
 #unbind ^A
