add myles at work

--- a/tmux.conf
+++ b/tmux.conf
@@ -20,6 +20,8 @@ set-option -g default-command ". > /dev/null 2>&1; reattach-to-user-namespace -l
 #bind ^A select-pane -t :.+
 # pane splitting
 bind v split-window -h -c "#{pane_current_path}"
+# fb's cmdT
+# bind V split-window -h -c "#{pane_current_path}" myles
 bind s split-window -c "#{pane_current_path}"
 bind S choose-tree
 
