fix tmux session switcher

--- a/tmux.conf
+++ b/tmux.conf
@@ -23,7 +23,7 @@ bind v split-window -h -c "#{pane_current_path}"
 # fb's cmdT
 # bind V split-window -h -c "#{pane_current_path}" myles
 bind s split-window -c "#{pane_current_path}"
-bind S choose-tree
+bind S choose-session
 
 # for navigating in and out of vim easily
 # Smart pane switching with awareness of vim splits
