--- a/tmux.conf
+++ b/tmux.conf
@@ -13,7 +13,7 @@ setw -g mode-keys vi
 set -s escape-time 0
 # the future has 8 bit color
 set -g default-terminal "screen-256color"
-if-shell "uname | grep -q Darwin" "set-option -g default-command \"reattach-to-user-namespace -l bash\""
+if-shell "uname | grep -q Darwin" "set-option -g default-command \"reattach-to-user-namespace -l $SHELL\""
 
 # quick pane cycling, doesn't work..?
 #unbind ^A
@@ -41,8 +41,8 @@ bind l if-shell "$is_vim" "send-keys C-h" "select-pane -R"
 
 # vim style copy in copy mode
 # PSA: just option-click text (shift click on non OS X)
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-selection 
 # C-a C-w to send C-w
 bind-key C-w send-keys C-w
 
