set up one light theme, true colors for vim

--- a/tmux.conf
+++ b/tmux.conf
@@ -11,8 +11,9 @@ bind R source-file ~/.tmux.conf
 setw -g mode-keys vi
 # nvim, not vim
 set -s escape-time 0
-# the future has 8 bit color
-set -g default-terminal "screen-256color"
+# the future has true color
+set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
+set -g default-terminal 'tmux-256color'
 if-shell "uname | grep -q Darwin" "set-option -g default-command \"reattach-to-user-namespace -l $SHELL\""
 
 # quick pane cycling, doesn't work..?
