--- a/tmux.conf
+++ b/tmux.conf
@@ -44,8 +44,6 @@ bind l if-shell "$is_vim" "send-keys C-h" "select-pane -R"
 # PSA: just option-click text (shift click on non OS X)
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-selection 
-# C-a C-w to send C-w
-bind-key C-w send-keys C-w
 
 # for mouse control
 set-option -g mouse on
@@ -97,8 +95,10 @@ set -g status-right '#[fg=blue]#S #[fg=black]• #[fg=magenta,bg=default]#(echo 
 
 # smarter window cycling
 # cycle windows
-bind -n C-w next-window
-bind -n C-q previous-window
+#bind -n C-w next-window
+#bind -n C-q previous-window
+# C-a C-w to send C-w
+#bind-key C-w send-keys C-w
 
 # bind window hotkeys
 bind-key -n C-0 select-window -t :0
