--- a/tmux.conf
+++ b/tmux.conf
@@ -25,20 +25,6 @@ bind v split-window -h -c "#{pane_current_path}"
 bind s split-window -c "#{pane_current_path}"
 bind S choose-session
 
-# for navigating in and out of vim easily
-# Smart pane switching with awareness of vim splits
-is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
-bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
-bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
-bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
-bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
-bind -n 'C-\' if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
-# help for nested tmux
-bind h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
-bind j if-shell "$is_vim" "send-keys C-h" "select-pane -D"
-bind k if-shell "$is_vim" "send-keys C-h" "select-pane -U"
-bind l if-shell "$is_vim" "send-keys C-h" "select-pane -R"
-
 # vim style copy in copy mode
 # PSA: just option-click text (shift click on non OS X)
 bind-key -T copy-mode-vi v send-keys -X begin-selection
@@ -114,20 +100,12 @@ bind-key -n C-9 select-window -t :9
 # tpm binds prefix I to reload / install, like :PluginInstall for Vundle
 # prefix U to update
 # tmux plugin manager
-# List of plugins
-# Supports `github_username/repo` or full git repo URLs
-set -g @tpm_plugins '              \
-  tmux-plugins/tpm                 \
-  tmux-plugins/tmux-resurrect      \
-  tmux-plugins/tmux-yank           \
-  nhdaly/tmux-scroll-copy-mode     \
-  tmux-plugins/tmux-sensible       \
-'
-# new syntax, not using for now
-#set -g @plugin 'tmux-plugins/tpm'
-#set -g @plugin 'tmux-plugins/tmux-resurrect'
-#set -g @plugin 'tmux-plugins/tmux-yank'
-#set -g @plugin 'nhdaly/tmux-scroll-copy-mode'
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'nhdaly/tmux-scroll-copy-mode'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'christoomey/vim-tmux-navigator'
 
 # for tmux-resurrect
 set -g @resurrect-processes 'vim mvim "git log" "~MacVim.app"'
