--- a/alacritty.yml
+++ b/alacritty.yml
@@ -390,10 +390,12 @@ live_config_reload: true
 #   - (macOS) /bin/bash --login
 #   - (Linux/BSD) user login shell
 #   - (Windows) powershell
-#shell:
-#  program: /bin/bash
-#  args:
-#    - --login
+shell:
+  program: /bin/zsh
+  args:
+    - --login
+    - -c
+    - "tmux attach || tmux new -s base; zsh"
 
 # Startup directory
 #
