--- a/alacritty.yml
+++ b/alacritty.yml
@@ -99,7 +99,7 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: DejaVu Sans for Powerline
+    family: DejaVu Sans Mono for Powerline
 
     # The `style` can be specified to pick a specific face.
     #style: Regular
