allow tmux and alacritty to change window title

--- a/tmux.conf
+++ b/tmux.conf
@@ -60,6 +60,7 @@ setw -g window-status-fg white
 setw -g window-status-bg default
 setw -g window-status-current-fg yellow
 setw -g window-status-current-bg colour236
+set-option -g set-titles on
 
 # pane border
 set-option -g pane-border-fg colour235
