--- a/tmux.conf
+++ b/tmux.conf
@@ -30,6 +30,9 @@ bind S choose-session
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-selection
 
+# required by vim-tmux-clipboard
+set -g focus-events on
+
 # for mouse control
 set-option -g mouse on
 # don't lose control when getting buffered output
