update tmux.conf for 2.8 to 2.9

--- a/tmux.conf
+++ b/tmux.conf
@@ -52,27 +52,26 @@ setw -g aggressive-resize on
 ###############################################################################
 # status bar format
 set-option -g status-position top
-set-option -g status-bg colour235
-set-option -g status-fg yellow
-set-option -g status-attr default
+set-option -ag status-style bg=colour235
+set-option -ag status-style fg=yellow
 
 # window format
 setw -g window-status-format " #I:#W "
 setw -g window-status-current-format " #I:#W "
-setw -g window-status-fg white
-setw -g window-status-bg default
-setw -g window-status-current-fg yellow
-setw -g window-status-current-bg colour236
+setw -ag window-status-style fg=white
+setw -ag window-status-style bg=default
+setw -ag window-status-current-style fg=yellow
+setw -ag window-status-current-style bg=colour236
 set-option -g set-titles on
 
 # pane border
-set-option -g pane-border-fg colour235
-set-option -g pane-active-border-fg colour240
-set-option -g pane-active-border-bg default
+set-option -ag pane-border-style fg=colour235
+set-option -ag pane-active-border-style fg=colour240
+set-option -ag pane-active-border-style bg=default
 
 # message text
-set-option -g message-bg colour235
-set-option -g message-fg yellow
+set-option -ag message-style fg=yellow
+set-option -ag message-style bg=colour235
 
 set -g status-interval 1
 set -g status-justify left # left align window list
