--- a/tmux.conf
+++ b/tmux.conf
@@ -12,8 +12,9 @@ setw -g mode-keys vi
 # nvim, not vim
 set -s escape-time 0
 # the future has true color
-set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
-set -g default-terminal 'tmux-256color'
+# set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
+set-option -ga terminal-overrides ",xterm-256color:Tc"
+set -g default-terminal 'xterm-256color'
 
 # quick pane cycling, doesn't work..?
 #unbind ^A
